changed colors, added jumbotron overflow, fixed mobile optimization

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -45,7 +45,7 @@ nav a:focus {
 	left: 0;
 	width: 100%;
 	height: 3px;
-	background: #566473;
+	background: #FF6D00;
 	content: '';
 	-webkit-transition: -webkit-transform 0.3s;
 	-moz-transition: -moz-transform 0.3s;
