--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -21,3 +21,13 @@ ul {
   background-color: rgba(255, 0, 0, 0.2);
   background-size: 100%;
 }
+
+.float-left {
+  float: left;
+}
+
+@media only screen and (max-width: 600px) {
+.float-left {
+  float: none;
+}
+}
